[tool.poetry]
name = "procgen_play"
version = "0.1.0"
description = ""
authors = ["Anaelle Laurans <16943368+Laurans@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
procgen = "^0.9.4"
opencv-python = "^4.2.0"
h5py = "^2.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pdbpp = "^0.10.2"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
procgen_play = 'procgen_play.interactive:main'